added "images" to file path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td> <img src="/me_profile_pic.jpg" alt="Chrissie's profile picture" height="200"></td>
+      <td> <img src="images/me_profile_pic.jpg" alt="Chrissie's profile picture" height="200"></td>
       <td>
         <h1>Chrissie M. Lavender</h1>
         <p>Product Manager of Forever21.com site navigation. <em>Founder and COO of <a href="https://www.revivifyou.com">REVIVIFY</a></em></p>
